tpc交易相关修改完善

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -386,9 +386,24 @@
         <activity
             android:name=".activity.OrderPayActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.OrderPayBuyActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".activity.OrderStateDetailActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".activity.TpcFriendShareActivity" android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.OrderPayBuyActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.OrderStateDetailActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.TpcFriendShareActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.QuotesActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.ExchangeAreaActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.TpcAssetsActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
